[package]
name = "rehash-core"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1"
zstd = { version = "0.13", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "rt", "macros"] }
thiserror = "2"
tracing = "0.1"
tar = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
