[package]
name = "rehash-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
rehash-core = { path = "../rehash-core" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
