[package]
name = "rehash-daemon"
version = "0.1.0"
edition = "2021"
description = "Background daemon for the rehash build cache: manages cache store, watches source files, IPC server"
license = "MIT"
repository = "https://github.com/Emran-goat/rehash"

[dependencies]
rehash-core = { version = "0.1.0", path = "../rehash-core" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
